--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,9 @@
     <title>My Parcel App</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+      
+    </div>
     <script type="module" src="index.js"></script>
   </body>
 </html>
