--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>My Parcel App</title>
+    <title>Thors todo app react</title>
   </head>
   <body>
     <div id="app">
