--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-<!DOCTYPE html><html lang="en"><head><link rel="stylesheet" href="index.8756fdfb.css"><meta charset="utf-8"><title>Thors todo app react</title></head><body> <div id="app"> </div> <script type="module" src="index.4fbee9d4.js"></script> </body></html>
+<!DOCTYPE html>
+<html lang="en">
+  <head><link rel="stylesheet" href="/index.710e9678.css">
+    <meta charset="utf-8">
+    <title>Thors todo app react</title>
+  </head>
+  <body>
+    <div id="app">
+      
+    </div>
+    <script src="/index.379dd93c.js" defer=""></script>
+  </body>
+</html>
